This is updated codes

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "sequelize": "^6.33.0"
   }
 }
